--- a/Makefile.am
+++ b/Makefile.am
@@ -26,7 +26,7 @@ distwin32-dir :
 	  make; \
 	  make install; \
 	elif which docker >/dev/null; then \
-	  gtar --transform='s/Dockerfile.dev/Dockerfile/' -cz * | docker build -t liblouis-dev -; \
+	  gtar --transform='s/Dockerfile.dev/Dockerfile/' -cz .* * | docker build -t liblouis-dev -; \
 	  mkdir -p liblouis-$(VERSION)-win32; \
 	  docker run --rm -v $(CURDIR)/liblouis-$(VERSION)-win32:/root/src/liblouis/liblouis-$(VERSION)-win32 liblouis-dev make distwin32-dir; \
 	fi
@@ -45,7 +45,7 @@ distwin64-dir :
 	  make; \
 	  make install; \
 	elif which docker >/dev/null; then \
-	  gtar --transform='s/Dockerfile.dev/Dockerfile/' -cz * | docker build -t liblouis-dev -; \
+	  gtar --transform='s/Dockerfile.dev/Dockerfile/' -cz .* * | docker build -t liblouis-dev -; \
 	  mkdir -p liblouis-$(VERSION)-win64; \
 	  docker run --rm -v $(CURDIR)/liblouis-$(VERSION)-win64:/root/src/liblouis/liblouis-$(VERSION)-win64 liblouis-dev make distwin64-dir; \
 	fi
