install pkg-config file to arch-independent location
It is arch-independent, so no need to install it to /usr/lib*

Cc: Jonas Ådahl <jadahl@gmail.com>
Signed-off-by: Igor Gnatenko <i.gnatenko.brain@gmail.com>
Reviewed-by: Quentin Glidic <sardemff7+git@sardemff7.net>

--- a/Makefile.am
+++ b/Makefile.am
@@ -15,5 +15,4 @@ dist_noinst_DATA =								\
 	$(sort $(foreach p,$(unstable_protocols),$(dir $p)README))		\
 	$(NULL)
 
-pkgconfigdir = $(libdir)/pkgconfig
-pkgconfig_DATA = wayland-protocols.pc
+noarch_pkgconfig_DATA = wayland-protocols.pc
