Create a broker interface for the new Mojo EDK so that the browser can create and duplicate message pipes.
This is needed on Windows because sandboxed processes can't create named pipes or duplicate their handles to other processes. Since the new EDK uses one OS pipe per Mojo pipe, child processes need the parent process' help. When a message pipe is created in a child process, it will ask the browser process to do it. When a child process wants to send a mojo pipe to another process, it exchanges the pipe handle with an integer token that it sends instead. The receiving process can exchange that token with a pipe handle.

With this patch, --use-new-edk works with chrome's sandbox.

BUG=478251
R=rickyz@chromium.org, tsepez@chromium.org, yzshen@chromium.org

Review URL: https://codereview.chromium.org/1387963004 .

Cr-Commit-Position: refs/heads/master@{#361265}

Former-commit-id: fbada2c0dfa76e3cad57432dc72fc033aa331b50

--- a/mojo/edk/system/BUILD.gn
+++ b/mojo/edk/system/BUILD.gn
@@ -31,6 +31,8 @@ static_library("system") {
     "awakable.h",
     "awakable_list.cc",
     "awakable_list.h",
+    "child_token_serializer_win.cc",
+    "child_token_serializer_win.h",
     "configuration.cc",
     "configuration.h",
     "core.cc",
@@ -55,6 +57,10 @@ static_library("system") {
     "message_pipe_dispatcher.cc",
     "message_pipe_dispatcher.h",
     "options_validation.h",
+    "parent_token_serializer_state_win.cc",
+    "parent_token_serializer_state_win.h",
+    "parent_token_serializer_win.cc",
+    "parent_token_serializer_win.h",
     "platform_handle_dispatcher.cc",
     "platform_handle_dispatcher.h",
     "raw_channel.cc",
@@ -65,6 +71,10 @@ static_library("system") {
     "shared_buffer_dispatcher.h",
     "simple_dispatcher.cc",
     "simple_dispatcher.h",
+    "simple_token_serializer_win.cc",
+    "simple_token_serializer_win.h",
+    "token_serializer_messages_win.h",
+    "token_serializer_win.h",
     "transport_data.cc",
     "transport_data.h",
     "waiter.cc",
