--- a/infra/config/cq.cfg
+++ b/infra/config/cq.cfg
@@ -26,6 +26,9 @@ verifiers {
 # chrome-eng-review per
 # https://sites.google.com/a/chromium.org/dev/developers/testing/chromium-build-infrastructure/tour-of-the-chromium-buildbot?pli=1#TOC-Adding-new-build-configurations-and-tests-to-the-main-Chromium-waterfall-Commit-Queue
   try_job {
+    try_job_retry_config {
+      global_retry_quota: 1
+    }
     buckets {
       name: "tryserver.chromium.linux"
       builders { name: "android_arm64_dbg_recipe" }
