ar-ar-g1, ar-fa, ta-ta-g1: Fix unit tests. There is nothing in the table that suggests the endcaps sign needs to be omitted. If such a rule exists it can be achieved with a multi-pass opcode. See commit f7084d12f50863a5e54a305e2dc7155d0dcd2a4e

--- a/tests/yaml/ar-ar-g1_harness.yaml
+++ b/tests/yaml/ar-ar-g1_harness.yaml
@@ -425,7 +425,7 @@ tests:
   - [Humanwareأو, ⠠⠓⠥⠍⠁⠝⠺⠁⠗⠑⠌⠺]
   - [i, ⠊]
   - ['I:', ⠠⠊⠒]
-  - [IAccessible2, ⠠⠠⠊⠁⠉⠉⠑⠎⠎⠊⠃⠇⠑⠼⠃]
+  - [IAccessible2, ⠠⠠⠊⠁⠠⠄⠉⠉⠑⠎⠎⠊⠃⠇⠑⠼⠃]
   - [IM, ⠠⠠⠊⠍]
   - [IME), ⠠⠠⠊⠍⠑⠴]
   - ['Inc.,', ⠠⠊⠝⠉⠲⠨]
@@ -532,7 +532,7 @@ tests:
   - ['#MouseSettings]', ⠼⠠⠍⠕⠥⠎⠑⠠⠎⠑⠞⠞⠊⠝⠛⠎⠴⠄]
   - ['+++[MouseSettings]', ⠰⠖⠰⠖⠰⠖⠠⠦⠠⠍⠕⠥⠎⠑⠠⠎⠑⠞⠞⠊⠝⠛⠎⠴⠄]
   - [Mozilla, ⠠⠍⠕⠵⠊⠇⠇⠁]
-  - [MPower, ⠠⠠⠍⠏⠕⠺⠑⠗]
+  - [MPower, ⠠⠠⠍⠏⠠⠄⠕⠺⠑⠗]
   - [MSSpeech_TTS_en-US_ZiraPro.msi, ⠸⠬⠍⠎⠎⠏⠑⠑⠉⠓⠸⠞⠞⠎⠸⠑⠝⠤⠥⠎⠸⠵⠊⠗⠁⠏⠗⠕⠲⠍⠎⠊⠸⠱]
   - [n), ⠝⠴]
   - ['N:', ⠠⠝⠒]
