--- a/tests/yaml/ar-fa_harness.yaml
+++ b/tests/yaml/ar-fa_harness.yaml
@@ -115,7 +115,7 @@ tests:
   - ['http://www.nvaccess.org/]٬', ⠸⠬⠓⠞⠞⠏⠒⠌⠌⠺⠺⠺⠲⠝⠧⠁⠉⠉⠑⠎⠎⠲⠕⠗⠛⠌⠴⠠⠸⠱⠄⡳⠭⠴⠖⠖⠉⠄]
   - [i, ⠊]
   - ['i:', ⠊⠒]
-  - [IAccessible2, ⠠⠠⠊⠁⠉⠉⠑⠎⠎⠊⠃⠇⠑⠼⠃]
+  - [IAccessible2, ⠠⠠⠊⠁⠠⠄⠉⠉⠑⠎⠎⠊⠃⠇⠑⠼⠃]
   - ['%!includeconf:', ⠒⠏⠖⠊⠝⠉⠇⠥⠙⠑⠉⠕⠝⠋⠒]
   - ['''insert', ⠠⠦⠊⠝⠎⠑⠗⠞]
   - ['''insert''', ⠠⠦⠊⠝⠎⠑⠗⠞⠴⠄]
