--- a/tests/yaml/ta-ta-g1_harness.txt.bak.yaml
+++ b/tests/yaml/ta-ta-g1_harness.txt.bak.yaml
@@ -318,7 +318,7 @@ tests:
   - [fwinrt, ⠋⠺⠊⠝⠗⠞]
   - ['g:', ⠰⠛⠒]
   - [Gesture, ⠠⠛⠑⠎⠞⠥⠗⠑]
-  - ['GHz,', ⠠⠠⠛⠓⠵⠂]
+  - ['GHz,', ⠠⠠⠛⠓⠠⠄⠵⠂]
   - [Google, ⠠⠛⠕⠕⠛⠇⠑]
   - [Graphic, ⠠⠛⠗⠁⠏⠓⠊⠉]
   - [Grid, ⠠⠛⠗⠊⠙]
@@ -371,7 +371,7 @@ tests:
   - ['[Humanware', ⠠⠶⠠⠓⠥⠍⠁⠝⠺⠁⠗⠑]
   - ['HumanWare:', ⠠⠓⠥⠍⠁⠝⠠⠺⠁⠗⠑⠒]
   - ['i:', ⠰⠊⠒]
-  - ['IAccessible2,', ⠠⠠⠊⠁⠉⠉⠑⠎⠎⠊⠃⠇⠑⠼⠃⠂]
+  - ['IAccessible2,', ⠠⠠⠊⠁⠠⠄⠉⠉⠑⠎⠎⠊⠃⠇⠑⠼⠃⠂]
   - [Icon, ⠠⠊⠉⠕⠝]
   - [IM, ⠠⠠⠊⠍]
   - [(In, ⠶⠠⠊⠝]
@@ -444,7 +444,7 @@ tests:
   - ['#MouseSettings]', ⠼⠠⠍⠕⠥⠎⠑⠠⠎⠑⠞⠞⠊⠝⠛⠎⠶⠄]
   - ['+++[MouseSettings]', ⠈⠬⠈⠬⠈⠬⠠⠶⠠⠍⠕⠥⠎⠑⠠⠎⠑⠞⠞⠊⠝⠛⠎⠶⠄]
   - [Mozilla, ⠠⠍⠕⠵⠊⠇⠇⠁]
-  - [MPower, ⠠⠠⠍⠏⠕⠺⠑⠗]
+  - [MPower, ⠠⠠⠍⠏⠠⠄⠕⠺⠑⠗]
   - [MSSpeech_TTS_en-US_ZiraPro.msi, ⠠⠠⠍⠎⠎⠠⠄⠏⠑⠑⠉⠓⠸⠠⠠⠞⠞⠎⠸⠑⠝⠤⠠⠠⠥⠎⠸⠠⠵⠊⠗⠁⠠⠏⠗⠕⠨⠍⠎⠊]
   - ['n:', ⠰⠝⠒]
   - [n), ⠰⠝⠶]
