Add screensaver idle inhibitor protocol
This interface allows disabling of screensaver/screenblanking on a
per-surface basis.  As long as the surface remains visible and
non-occluded it blocks the screensaver, etc. from activating on the
output(s) that the surface is visible on.

To uninhibit, simply destroy the inhibitor object.

Signed-off-by: Bryce Harrington <bryce@bryceharrington.org>
Reviewed-by: Yong Bakos <ybakos@humanoriented.com>
Reviewed-by: Jonas Ådahl <jadahl@gmail.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -10,6 +10,7 @@ unstable_protocols =								\
 	unstable/tablet/tablet-unstable-v1.xml			                \
 	unstable/tablet/tablet-unstable-v2.xml			                \
 	unstable/xdg-foreign/xdg-foreign-unstable-v1.xml			\
+	unstable/idle-inhibit/idle-inhibit-unstable-v1.xml			\
 	$(NULL)
 
 stable_protocols =								\
